[package]
name = "chrome-tool"
version = "0.1.1"
edition = "2021"
description = "Chrome browser version manager for frontend developers"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
indicatif = "0.17"
colored = "2"
dirs = "5"
anyhow = "1"
futures-util = "0.3"
